Update Jupyter notebooks

--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "6e9031ff-c850-4b4e-ac5a-4420849a58b9",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "07403405-1c51-46e0-a270-c19b710a7421",
    "metadata": {},
    "outputs": [],
@@ -22,25 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "15a85cc0-45fa-40fc-b48e-e7bc3e8b2b56",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataframe.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "b17e8d4b-1144-445c-8e5a-5bc27a4c4469",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elapsed time: 239.5559 seconds\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 6219749 entries, 0 to 6219748\n",
       "Columns: 199 entries, repository_url to type\n",
@@ -49,7 +38,261 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "dataframe.info(memory_usage=\"deep\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b17e8d4b-1144-445c-8e5a-5bc27a4c4469",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>repository_url</th>\n",
+       "      <th>repository_has_downloads</th>\n",
+       "      <th>repository_created_at</th>\n",
+       "      <th>repository_has_issues</th>\n",
+       "      <th>repository_description</th>\n",
+       "      <th>repository_forks</th>\n",
+       "      <th>repository_fork</th>\n",
+       "      <th>repository_has_wiki</th>\n",
+       "      <th>repository_homepage</th>\n",
+       "      <th>repository_size</th>\n",
+       "      <th>...</th>\n",
+       "      <th>payload_commit_name</th>\n",
+       "      <th>payload_commit_flag</th>\n",
+       "      <th>payload_page_sha</th>\n",
+       "      <th>payload_page_title</th>\n",
+       "      <th>payload_page_action</th>\n",
+       "      <th>payload_page_page_name</th>\n",
+       "      <th>payload_page_summary</th>\n",
+       "      <th>payload_page_html_url</th>\n",
+       "      <th>url</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>https://github.com/willdurand/Geocoder</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2011-11-07 21:56:41</td>\n",
+       "      <td>True</td>\n",
+       "      <td>The almost missing Geocoder PHP 5.3 library.</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>http://geocoder-php.org/</td>\n",
+       "      <td>664.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://github.com/tonypiper/Geocoder</td>\n",
+       "      <td>ForkEvent</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>https://github.com/forkcms/forkcms</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2010-12-04 18:06:15</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Fork is an open source CMS.</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>http://www.fork-cms.com</td>\n",
+       "      <td>1240.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://github.com/tiderjian/forkcms</td>\n",
+       "      <td>ForkEvent</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>https://github.com/sehmaschine/django-grappelli</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2010-03-26 12:25:59</td>\n",
+       "      <td>True</td>\n",
+       "      <td>A jazzy skin for the Django Admin-Interface (o...</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>http://sehmaschine.github.com/django-grappelli/</td>\n",
+       "      <td>2552.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://github.com/rafales/django-grappelli</td>\n",
+       "      <td>ForkEvent</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>https://github.com/alexgorbatchev/SyntaxHighli...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2010-12-16 02:36:20</td>\n",
+       "      <td>True</td>\n",
+       "      <td>SyntaxHighlighter is a fully functional self-c...</td>\n",
+       "      <td>176.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>http://alexgorbatchev.com/SyntaxHighlighter/</td>\n",
+       "      <td>260.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://github.com/hewerthomn/SyntaxHighlighter</td>\n",
+       "      <td>ForkEvent</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>https://github.com/davist11/In-Field-Labels-jQ...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2010-02-09 03:07:46</td>\n",
+       "      <td>False</td>\n",
+       "      <td>This is a simple plugin that turns properly fo...</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>http://fuelyourcoding.com/scripts/infield/</td>\n",
+       "      <td>192.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://github.com/bentarifa/In-Field-Labels-j...</td>\n",
+       "      <td>ForkEvent</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 199 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                      repository_url repository_has_downloads  \\\n",
+       "0             https://github.com/willdurand/Geocoder                     True   \n",
+       "1                 https://github.com/forkcms/forkcms                     True   \n",
+       "2    https://github.com/sehmaschine/django-grappelli                     True   \n",
+       "3  https://github.com/alexgorbatchev/SyntaxHighli...                     True   \n",
+       "4  https://github.com/davist11/In-Field-Labels-jQ...                     True   \n",
+       "\n",
+       "  repository_created_at repository_has_issues  \\\n",
+       "0   2011-11-07 21:56:41                  True   \n",
+       "1   2010-12-04 18:06:15                 False   \n",
+       "2   2010-03-26 12:25:59                  True   \n",
+       "3   2010-12-16 02:36:20                  True   \n",
+       "4   2010-02-09 03:07:46                 False   \n",
+       "\n",
+       "                              repository_description  repository_forks  \\\n",
+       "0       The almost missing Geocoder PHP 5.3 library.              26.0   \n",
+       "1                        Fork is an open source CMS.              81.0   \n",
+       "2  A jazzy skin for the Django Admin-Interface (o...              58.0   \n",
+       "3  SyntaxHighlighter is a fully functional self-c...             176.0   \n",
+       "4  This is a simple plugin that turns properly fo...              13.0   \n",
+       "\n",
+       "  repository_fork repository_has_wiki  \\\n",
+       "0           False                True   \n",
+       "1           False               False   \n",
+       "2           False               False   \n",
+       "3           False                True   \n",
+       "4            True                True   \n",
+       "\n",
+       "                               repository_homepage  repository_size  ...  \\\n",
+       "0                         http://geocoder-php.org/            664.0  ...   \n",
+       "1                          http://www.fork-cms.com           1240.0  ...   \n",
+       "2  http://sehmaschine.github.com/django-grappelli/           2552.0  ...   \n",
+       "3     http://alexgorbatchev.com/SyntaxHighlighter/            260.0  ...   \n",
+       "4       http://fuelyourcoding.com/scripts/infield/            192.0  ...   \n",
+       "\n",
+       "  payload_commit_name payload_commit_flag payload_page_sha  \\\n",
+       "0                 NaN                 NaN              NaN   \n",
+       "1                 NaN                 NaN              NaN   \n",
+       "2                 NaN                 NaN              NaN   \n",
+       "3                 NaN                 NaN              NaN   \n",
+       "4                 NaN                 NaN              NaN   \n",
+       "\n",
+       "   payload_page_title  payload_page_action payload_page_page_name  \\\n",
+       "0                 NaN                  NaN                    NaN   \n",
+       "1                 NaN                  NaN                    NaN   \n",
+       "2                 NaN                  NaN                    NaN   \n",
+       "3                 NaN                  NaN                    NaN   \n",
+       "4                 NaN                  NaN                    NaN   \n",
+       "\n",
+       "  payload_page_summary payload_page_html_url  \\\n",
+       "0                  NaN                   NaN   \n",
+       "1                  NaN                   NaN   \n",
+       "2                  NaN                   NaN   \n",
+       "3                  NaN                   NaN   \n",
+       "4                  NaN                   NaN   \n",
+       "\n",
+       "                                                 url       type  \n",
+       "0              https://github.com/tonypiper/Geocoder  ForkEvent  \n",
+       "1               https://github.com/tiderjian/forkcms  ForkEvent  \n",
+       "2        https://github.com/rafales/django-grappelli  ForkEvent  \n",
+       "3    https://github.com/hewerthomn/SyntaxHighlighter  ForkEvent  \n",
+       "4  https://github.com/bentarifa/In-Field-Labels-j...  ForkEvent  \n",
+       "\n",
+       "[5 rows x 199 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataframe.head()"
+   ]
   },
   {
    "cell_type": "code",
